--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -96,7 +96,7 @@ This guide assumes that the client is on the same hardware as the backend server
 
 === New Installation ===
  # power down apache2
- # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases/ package]
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases/ package] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
 $ cd cif-v1-1.X.X
