--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -122,7 +122,7 @@ feed_retention = 7
   * (testing) [Upgrade_DebianWheezy_v1 Debian 7]
   * (testing) [Upgrade_Ubuntu12_v1 Ubuntu 12]
   * (testing) [Upgrade_CentOS6_v1 CentOS6]
- # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release]
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
 $ cd cif-v1-1.X.X
@@ -199,7 +199,7 @@ $ perl sbin/migrate-data.pl -t 4 -d
 ----
 If you're upgrading from RC2, *THIS WILL PURGE ALL EXISTING DATA*, but it will preserve your apikeys. Due to some data-structure changes in RC3 there is no way around this.
 
- # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release]
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
 $ cd cif-v1-1.X.X
@@ -212,7 +212,7 @@ $ make rebuilddb
 == v1-RC3 ==
 ----
 If you're upgrading from RC3, there's nothing to do other than install the new code
- # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release]
+ # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
 $ cd cif-v1-1.X.X
