--- a/wiki/DbiInstall_v1.wiki
+++ b/wiki/DbiInstall_v1.wiki
@@ -29,6 +29,18 @@ $ sudo make install
 === Configs ===
 the application user must have a a cif config it can read, for example if it's a web application, a /etc/apache/mycif.conf could be created with the following:
 {{{
+# cif_archive configuration is required by cif-router, cif_feed (cif-router, libcif-dbi)
+[cif_archive]
+# if we want to enable rir/asn/cc, etc... they take up more space in our repo
+# datatypes = infrastructure,domain,url,email,search,malware,cc,asn,rir
+datatypes = infrastructure,domain,url,email,search,malware
+
+# if you're going to enable feeds
+# feeds = infrastructure,domain,url,email,search,malware
+
+# enable your own groups is you start doing data-sharing with various groups
+#groups = everyone,group1.example.com,group2.example.com,group3.example.com
+
 [db]
 host = 127.0.0.1
 user = postgres
