--- a/wiki/DbiInstall_v1.wiki
+++ b/wiki/DbiInstall_v1.wiki
@@ -41,6 +41,15 @@ datatypes = infrastructure,domain,url,email,search,malware
 # enable your own groups is you start doing data-sharing with various groups
 #groups = everyone,group1.example.com,group2.example.com,group3.example.com
 
+# if the normal IODEF restriction classes don't fit your needs
+# ref: https://code.google.com/p/collective-intelligence-framework/wiki/RestrictionMapping_v1
+# restriction map is required by cif-router, cif_feed (cif-router, libcif-dbi)
+[restriction_map]
+#white = public 
+#green = public 
+#amber = need-to-know 
+#red   = private
+
 [db]
 host = 127.0.0.1
 user = postgres
