Edited wiki page PostgresInstall_v1 through web user interface.

--- a/wiki/PostgresInstall_v1.wiki
+++ b/wiki/PostgresInstall_v1.wiki
@@ -190,6 +190,7 @@ Continue with the [ServerInstall_v1#Installing_CIF Installing CIF]
 
 = Helpful References =
 ----
+ # [http://www.pgexperts.com/document.html?id=36 Five Steps to PostgresSQL Performance]
  # http://www.amazon.com/PostgreSQL-High-Performance-Gregory-Smith/dp/184951030X/ref=sr_1_1?ie=UTF8&qid=1321356392&sr=8-1
  # http://developer.postgresql.org/pgdocs/postgres/kernel-resources.html
  # http://momjian.us/main/writings/pgsql/hw_performance/
