--- a/wiki/PostgresInstall_v1.wiki
+++ b/wiki/PostgresInstall_v1.wiki
@@ -192,7 +192,7 @@ Continue with the [ServerInstall_v1#Installing_CIF Installing CIF]
 ----
  # [http://www.pgexperts.com/document.html?id=36 Five Steps to PostgresSQL Performance]
  # [http://www.randombugs.com/linux/tuning-linux-system-database.html Tuning a Linux system for Database Server]
- # http://www.amazon.com/PostgreSQL-High-Performance-Gregory-Smith/dp/184951030X/ref=sr_1_1?ie=UTF8&qid=1321356392&sr=8-1
+ # [http://www.amazon.com/PostgreSQL-High-Performance-Gregory-Smith/dp/184951030X/ref=sr_1_1?ie=UTF8&qid=1321356392&sr=8-1 Book: PostgreSQL 9.0 High Performance]
  # http://developer.postgresql.org/pgdocs/postgres/kernel-resources.html
  # http://momjian.us/main/writings/pgsql/hw_performance/
  # http://www.revsys.com/writings/postgresql-performance.html
