Edited wiki page PostgresInstall_v1 through web user interface.

--- a/wiki/PostgresInstall_v1.wiki
+++ b/wiki/PostgresInstall_v1.wiki
@@ -196,7 +196,7 @@ Continue with the [ServerInstall_v1#Installing_CIF Installing CIF]
  # [http://developer.postgresql.org/pgdocs/postgres/kernel-resources.html Managing Kernel Resources]
  # [http://momjian.us/main/writings/pgsql/hw_performance/ PostgreSQL Hardware Performance Tuning]
  # [http://www.revsys.com/writings/postgresql-performance.html Performance Tuning PostgreSQL]
- # [http://wiki.postgresql.org/wiki/Tuning_Your_PostgreSQL_Server Tuning Your PostgreSQL Server]
- # [http://wiki.postgresql.org/wiki/FAQ PostgreSQL: FAQ]
  # [http://www.thegeekstuff.com/2009/05/15-advanced-postgresql-commands-with-examples/ 15 Advanced PostgreSQL Commands with Examples]
+ # [http://wiki.postgresql.org/wiki/Tuning_Your_PostgreSQL_Server PostgreSQL: Tuning Your PostgreSQL Server]
+ # [http://wiki.postgresql.org/wiki/FAQ PostgreSQL: FAQ]
  # [http://wiki.postgresql.org/wiki/Disk_Usage PostgreSQL: Disk Usage]
