--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -199,6 +199,11 @@ $ perl sbin/migrate-data.pl -t 4 -d
 ----
 If you're upgrading from RC2, *THIS WILL PURGE ALL EXISTING DATA*, but it will preserve your apikeys. Due to some data-structure changes in RC3 there is no way around this.
 
+ # backup the old cif directory if you have any custom rule-sets:
+{{{
+$ sudo mv /opt/cif /opt/cif-v1-old
+}}}
+
  # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
@@ -212,6 +217,12 @@ $ make rebuilddb
 == v1-RC3 ==
 ----
 If you're upgrading from RC3, there's nothing to do other than install the new code
+
+ # backup the old cif directory
+{{{
+$ sudo mv /opt/cif /opt/cif-v1-old
+}}}
+
  # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
