--- a/wiki/FeedConfig_v1.wiki
+++ b/wiki/FeedConfig_v1.wiki
@@ -32,7 +32,7 @@ CIF comes with a variety of pre-built feed configurations, with that there are m
 || confidence || <int> || see [TaxonomyConfidence_v1 Confidence] || no ||
 || description || <string> || short (1-2 space delimited word) description of the activity (eg: tdss spyeye) || no ||
 || detection || <string> || hourly/daily: useful if you do not have a timestamp || no ||
-|| detecttime || <string> || Most common timestamp formats are valid || no ||
+|| detecttime || <string> || when the event was detected, most common timestamp formats are valid || no ||
 || disabled || <string> || true, false || no ||
 || feed || <uri><filename> || {{{http://example.com/feed.csv}}} or /tmp/feed.csv || yes ||
 || feed_user || <string> || username (Basic authentication) || no ||
@@ -46,7 +46,7 @@ CIF comes with a variety of pre-built feed configurations, with that there are m
 || period || <string> || hourly/daily: how often the cif_crontool should pick up this feed (when in doubt, use daily) || no ||
 || protocol || <int><string> || 6 or tcp, 17 or udp || no ||
 || portlist || <int> || 22 or 80,443 or 6660-7000 || no ||
-|| reporttime || <string> || Most common timestamp formats are valid || no ||
+|| reporttime || <string> || when the event was reported, most often used when no timestamp is provided. most common timestamp formats are valid || no ||
 || restriction || <string> || public, default, need-to-know, private || no ||
 || severity || <string> || see [TaxonomySeverity_v1 Severity] || no ||
 || source || <string> || source of the feed, usually the domain where the feed is from (eg: example.com) || no ||
